adiciona links de fontes do Material Icons e traduz texto de permissão de perfil

--- a/app/views/action_permissions/index.html.erb
+++ b/app/views/action_permissions/index.html.erb
@@ -1,4 +1,6 @@
-
+<%= content_for :head do %>
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+<% end %>
 
 <div class="flex items-center justify-center min-h-screen bg-gray-900">
   <div class="col-span-12">
