--- a/app/views/controller_permissions/index.html.erb
+++ b/app/views/controller_permissions/index.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :head do %>
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+<% end %>
+
 <div class="flex items-center justify-center min-h-screen bg-gray-900">
   <div class="col-span-12">
     <div class="relative overflow-x-auto sm:rounded-lg md:p-8">
@@ -75,7 +79,6 @@
                       archive
                     <% end %>
                   </td>
-                  teste
                 </tr>
 
                 <!-- Modal de confirmação para cada controller_permission -->
