--- a/app/views/create_perfil_permissions/index.html.erb
+++ b/app/views/create_perfil_permissions/index.html.erb
@@ -11,7 +11,7 @@
           <i class="material-icons font-normal text-gray-600">
             <span class="text-lg text-white">add</span>
           </i>
-          <span class="text-white">Novo Create perfil permission</span>
+          <span class="text-white">Crirar nova Permissão de perfil</span>
         <% end %>
       </div>
 
