--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
-<nav class="w-full bg-white border-gray-200 dark:bg-gray-900">
+<nav class="w-full bg-white border-gray-200 dark:bg-gray-900 shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1)]">
   <div class="w-full bg-gradient-to-br from-indigo-900 via-purple-800 to-pink-700  relative font-[&#x27;Inter&#x27;] flex flex-wrap items-center justify-between px-4 py-4">
     <div class="container mx-auto">
       <div class="flex items-center justify-between">
         <%= link_to root_path, class: "flex items-center space-x-3 rtl:space-x-reverse" do %>
-          <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <svg class="w-6 h-6 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" viewBox="0 0 24 24">
             <path fill-rule="evenodd" d="M7.05 4.05A7 7 0 0 1 19 9c0 2.407-1.197 3.874-2.186 5.084l-.04.048C15.77 15.362 15 16.34 15 18a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1c0-1.612-.77-2.613-1.78-3.875l-.045-.056C6.193 12.842 5 11.352 5 9a7 7 0 0 1 2.05-4.95ZM9 21a1 1 0 0 1 1-1h4a1 1 0 1 1 0 2h-4a1 1 0 0 1-1-1Zm1.586-13.414A2 2 0 0 1 12 7a1 1 0 1 0 0-2 4 4 0 0 0-4 4 1 1 0 0 0 2 0 2 2 0 0 1 .586-1.414Z" clip-rule="evenodd"/>
-          </svg>
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Genius360</span>
+            </svg>
+            <span class="self-center text-2xl font-semibold whitespace-nowrap text-purple-300">Genius360</span>
         <% end %>
 
         <div class="flex items-center md:order-2 space-x-3 rtl:space-x-reverse">
@@ -20,34 +20,33 @@
             <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
             </svg>
-          </button>
-          
-          <div class="z-10 hidden bg-white divide-y divide-purple-900 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600" 
-                id="dropdownInformation">
-            <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+            </button>
+            
+            <div class="z-10 hidden bg-purple-900 rounded-lg backdrop-blur-sm shadow-2xl shadow-purple-500/50 w-44 dark:bg-gray-800/80" 
+              id="dropdownInformation">
+            <div class="px-4 py-3 text-sm text-center text-gray-100 dark:text-white">
               <% if user_signed_in? %>
-                <div class="font-medium"><%= current_user.name %></div>
-                <div class="font-medium truncate"><%= current_user.email %></div>
+              <div class="font-medium text-center"><%= current_user.name %></div>
+              <div class="font-medium truncate text-center"><%= current_user.email %></div>
               <% else %>
-                <%= link_to "Login", new_user_session_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white" %>
+              <%= link_to "Login", new_user_session_path, class: "block px-4 py-2 text-sm text-center text-gray-100 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300 dark:text-gray-200" %>
               <% end %>
             </div>
-            <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownInformationButton">
-              <li>
-                <%= link_to "Dashboard", "#", class: "block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" %>
+            <ul class="py-2 text-sm text-gray-100 dark:text-gray-200" aria-labelledby="dropdownInformationButton">
+              <li class="text-center">
+              <%= link_to "Dashboard", "#", class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
               </li>
-              <li>
-                <%= link_to "Settings", "#", class: "block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" %>
+              <li class="text-center">
+              <%= link_to "Settings", "#", class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
               </li>
-              <li>
-                <%= link_to "Earnings", "#", class: "block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white" %>
+              <li class="text-center">
+              <%= link_to "Earnings", "#", class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
               </li>
             </ul>
-            <div class="py-2">
-              <%= link_to "Sign out", "#", class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white" %>
+            <div class="py-2 text-center">
+              <%= link_to "Sign out", "#", class: "block px-4 py-2 text-sm text-gray-100 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300 dark:text-gray-200" %>
             </div>
-          </div>
-          
+            </div>
           <button data-collapse-toggle="navbar-user" 
                   type="button" 
                   class="md:hidden inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" 
@@ -63,19 +62,19 @@
         <div class="items-center justify-center w-full lg:flex lg:w-auto lg:order-1" id="navbar-user">
           <ul class="flex flex-row items-center justify-center space-x-4 lg:space-x-8 font-medium">
             <li class="text-center">
-              <%= link_to "Home", root_path, class: "block py-2 #{current_page?(root_path) ? 'text-yellow-400 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-yellow-400 dark:text-white dark:hover:text-yellow-400'} lg:border-0" %>
+              <%= link_to "Home", root_path, class: "block py-2 #{current_page?(root_path) ? 'text-purple-300 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-pink-400 dark:text-white dark:hover:text-pink-400'} lg:border-0" %>
             </li>
             <li class="text-center">
-              <%= link_to "Sobre", public_sobre_path, class: "block py-2 #{current_page?(public_sobre_path) ? 'text-yellow-400 border-b-2 border-indigo-700' : 'text-gray-900 hover:text-yellow-400 dark:text-white dark:hover:text-yellow-400'} lg:border-0" %>
+              <%= link_to "Sobre", public_sobre_path, class: "block py-2 #{current_page?(public_sobre_path) ? 'text-purple-300 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-pink-400 dark:text-white dark:hover:text-pink-400'} lg:border-0" %>
             </li>
             <li class="text-center">
-              <%= link_to "Serviços", public_servico_path, class: "block py-2 #{current_page?(public_servico_path) ? 'text-yellow-400 border-b-2 border-indigo-700' : 'text-gray-900 hover:text-yellow-400 dark:text-white dark:hover:text-yellow-400'} lg:border-0" %>
+              <%= link_to "Serviços", public_servico_path, class: "block py-2 #{current_page?(public_servico_path) ? 'text-purple-300 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-pink-400 dark:text-white dark:hover:text-pink-400'} lg:border-0" %>
             </li>
             <li class="text-center">
-              <%= link_to "Planos", public_precos_path, class: "block py-2 #{current_page?(public_precos_path) ? 'text-yellow-400 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-yellow-400 dark:text-white dark:hover:text-yellow-400'} lg:border-0" %>
+              <%= link_to "Planos", public_precos_path, class: "block py-2 #{current_page?(public_precos_path) ? 'text-purple-300 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-pink-400 dark:text-white dark:hover:text-pink-400'} lg:border-0" %>
             </li>
             <li class="text-center">
-              <%= link_to "Contatos", public_contato_path, class: "block py-2 #{current_page?(public_contato_path) ? 'text-yellow-400 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-yellow-400 dark:text-white dark:hover:text-yellow-400'} lg:border-0" %>
+              <%= link_to "Contatos", public_contato_path, class: "block py-2 #{current_page?(public_contato_path) ? 'text-purple-300 border-b-2 border-indigo-400' : 'text-gray-900 hover:text-pink-400 dark:text-white dark:hover:text-pink-400'} lg:border-0" %>
             </li>
           </ul>
         </div>
