--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,9 +36,9 @@
               <li class="text-center">
               <%= link_to "Dashboard", admin_dashboard_index_path , class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
               </li>
-              <li class="text-center">
-              <%= link_to "Settings", "#", class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
-              </li>
+                <li class="text-center">
+                <%= link_to "Settings", admin_pages_settings_path, class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
+                </li>
               <li class="text-center">
               <%= link_to "Earnings", "#", class: "block px-4 py-2 hover:bg-purple-800/70 hover:backdrop-blur-md transition-all duration-300" %>
               </li>
