--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h1 class="font-bold text-4xl">Admin::Pages#index</h1>
-  <p>Find me in app/views/admin/pages/index.html.erb</p>
+  <h1>Admin Dashboard</h1>
+  <p>Bem-vindo ao painel de administração.</p>
 </div>
